added new meta tags and fontawesome script

--- a/index.html
+++ b/index.html
@@ -3,13 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Renato Albuquerque, Frontend Mentor Project.">
+    <meta name="description" content="Frontend Mentor Challenge: To build out a news website homepage and get it looking as close to the design as possible.">
+    <meta name="keywords" content="frontend mentor, frontend, software, web, developer, development, HTML, HTML5, CSS, CSS3, JavaScript, Renato Albuquerque">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 
+    <script src="https://kit.fontawesome.com/86afd65ab5.js" crossorigin="anonymous"></script>
     <script src="script.js" defer></script>
+    
     <title>News Homepage</title>
 </head>
 <body>
