added html structure, tags

--- a/index.html
+++ b/index.html
@@ -18,6 +18,26 @@
     <title>News Homepage</title>
 </head>
 <body>
-    
+    <header class="header">
+
+    </header>
+
+    <main>
+        <section class="firstSection">
+
+        </section>
+
+        <section class="secondSection">
+
+        </section>
+    </main>
+
+    <!-- update name of classes. -->    
+    <footer class="footer">
+        <div class="desktopFooterSignature">
+            <p class="desktopTextFooter-p">Challenge by <br> <a href="https://www.frontendmentor.io/home" target="_blank" class="desktopTextFooter-a">Frontend Mentor</a></p>
+            <p class="desktopTextFooter-p">Coded by <br> <a href="https://rma-contacts.vercel.app/" target="_blank" class="desktopTextFooter-a">Renato Albuquerque</a></p>
+        </div>
+    </footer>    
 </body>
 </html>
