--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Frontend Mentor Challenge: To build out a news website homepage and get it looking as close to the design as possible.">
     <meta name="keywords" content="frontend mentor, frontend, software, web, developer, development, HTML, HTML5, CSS, CSS3, JavaScript, Renato Albuquerque">
     
+    <link rel="shortcut icon" href="files/assets/images/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&display=swap" rel="stylesheet">
