completed html and css for header

--- a/index.html
+++ b/index.html
@@ -19,26 +19,32 @@
     <title>News Homepage</title>
 </head>
 <body>
-    <header class="header">
-
-    </header>
-
-    <main>
-        <section class="firstSection">
-
-        </section>
-
-        <section class="secondSection">
-
-        </section>
-    </main>
-
-    <!-- update name of classes. -->    
-    <footer class="footer">
-        <div class="desktopFooterSignature">
-            <p class="desktopTextFooter-p">Challenge by <br> <a href="https://www.frontendmentor.io/home" target="_blank" class="desktopTextFooter-a">Frontend Mentor</a></p>
-            <p class="desktopTextFooter-p">Coded by <br> <a href="https://rma-contacts.vercel.app/" target="_blank" class="desktopTextFooter-a">Renato Albuquerque</a></p>
-        </div>
-    </footer>    
+    <div class="container">
+        <header class="header">
+            <img class="logoHeader" src="files/assets/images/logo.svg" alt="Logo, W.">
+            <nav>
+                <ul class="wrapMenu">
+                    <li class="itemMenu">Home</li>
+                    <li class="itemMenu">New</li>
+                    <li class="itemMenu">Popular</li>
+                    <li class="itemMenu">Trending</li>
+                    <li class="itemMenu">Categories</li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <section class="firstSection">
+            </section>
+            <section class="secondSection">
+            </section>
+        </main>
+        <!-- update name of classes. -->
+        <footer class="footer">
+            <div class="desktopFooterSignature">
+                <p class="desktopTextFooter-p">Challenge by <br> <a href="https://www.frontendmentor.io/home" target="_blank" class="desktopTextFooter-a">Frontend Mentor</a></p>
+                <p class="desktopTextFooter-p">Coded by <br> <a href="https://rma-contacts.vercel.app/" target="_blank" class="desktopTextFooter-a">Renato Albuquerque</a></p>
+            </div>
+        </footer>
+    </div>
 </body>
 </html>
