--- a/index.html
+++ b/index.html
@@ -32,12 +32,38 @@
                 </ul>
             </nav>
         </header>
+
         <main>
             <section class="firstSection">
+                <div id="firstSection-1">
+                    <!-- <img class="imageWeb3" src="files/assets/images/image-web-3-desktop.jpg" alt="Illustrative image, web desktop."> -->
+                </div>
+                <div id="firstSection-2">
+                    <h1>The Bright Future of Web 3.0?</h1>
+                </div>
+                <div id="firstSection-3">
+                    <p>We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. But is it really fulfilling its promise?</p>
+                    <button class="buttonSection-3">READ MORE</button>
+                </div>
+                <div id="firstSection-4">
+                    <h2 class="titleSection-4">New</h2>
+                    
+                    <h3 class="subtitleSection-4">Hydrogen VS Electric Cars</h3>
+                    <p class="textSection-4">Will hydrogen-fueled cars ever catch up to EVs?</p>
+
+                    <h3 class="subtitleSection-4">The Downsides of AI Artistry</h3>
+                    <p class="textSection-4">What are the possible adverse effects of on-demand AI image generation?</p>
+
+                    <h3 class="subtitleSection-4">Is VC Funding Drying Up?</h3>
+                    <p class="textSection-4">Private funding by VC firms is down 50% YOY. We take a look at what that means.</p>
+                </div>
             </section>
+
             <section class="secondSection">
+
             </section>
         </main>
+
         <!-- update name of classes. -->
         <footer class="footer">
             <div class="desktopFooterSignature">
