updated html and css files, second section, main

--- a/index.html
+++ b/index.html
@@ -60,7 +60,32 @@
             </section>
 
             <section class="secondSection">
+                <div class="wrapImageInfoSecondSection">
+                    <img class="imageSecondSection" src="files/assets/images/image-retro-pcs.jpg" alt="Image retro personal computers.">
+                    <div class="wrapInfoSecondSection">
+                        <h2 class="titleSecondSection">01</h2>
+                        <h3 class="subtitleSecondSection">Reviving Retro PCs</h3>
+                        <p class="textSecondSection">What happens when old PCs are given modern upgrades?</p>
+                    </div>
+                </div>
 
+                <div class="wrapImageInfoSecondSection">
+                    <img class="imageSecondSection" src="files/assets/images/image-top-laptops.jpg" alt="Image black keyboard of a laptop.">
+                    <div class="wrapInfoSecondSection">
+                        <h2 class="titleSecondSection">02</h2>
+                        <h3 class="subtitleSecondSection">Top 10 Laptops of 2022</h3>
+                        <p class="textSecondSection">Our best picks for various needs and budgets.</p>
+                    </div>
+                </div>
+
+                <div class="wrapImageInfoSecondSection">
+                    <img class="imageSecondSection" src="files/assets/images/image-gaming-growth.jpg" alt="Image retro personal computers.">
+                    <div class="wrapInfoSecondSection">
+                        <h2 class="titleSecondSection">03</h2>
+                        <h3 class="subtitleSecondSection">The Growth of Gaming</h3>
+                        <p class="textSecondSection">How the pandemic has sparked fresh opportunities.</p>
+                    </div>
+                </div>
             </section>
         </main>
 
