updated html and css files, footer

--- a/index.html
+++ b/index.html
@@ -89,11 +89,10 @@
             </section>
         </main>
 
-        <!-- update name of classes. -->
         <footer class="footer">
-            <div class="desktopFooterSignature">
-                <p class="desktopTextFooter-p">Challenge by <br> <a href="https://www.frontendmentor.io/home" target="_blank" class="desktopTextFooter-a">Frontend Mentor</a></p>
-                <p class="desktopTextFooter-p">Coded by <br> <a href="https://rma-contacts.vercel.app/" target="_blank" class="desktopTextFooter-a">Renato Albuquerque</a></p>
+            <div class="wrapTextFooter">
+                <p class="footer-p">Challenge by <a class="footer-a" href="https://www.frontendmentor.io/challenges/news-homepage-H6SWTa1MFl" target="_blank" rel="noopener noreferrer">Frontend Mentor</a></p>
+                <p class="footer-p">Coded by <a class="footer-a" href="https://rma-contacts.vercel.app/" target="_blank" rel="noopener noreferrer">Renato Albuquerque | <em>Software Developer</em></a></p>
             </div>
         </footer>
     </div>
