updated the title of the page

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script src="https://kit.fontawesome.com/86afd65ab5.js" crossorigin="anonymous"></script>
     <script src="script.js" defer></script>
     
-    <title>News Homepage</title>
+    <title>W. News Homepage</title>
 </head>
 <body>
     <div class="container">
